[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/icons/layers/defense_ranges.svg" type="Texture" id=1]
[ext_resource path="res://assets/icons/layers/resources.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/layers/events.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/layers/roads.svg" type="Texture" id=4]
[ext_resource path="res://assets/icons/layers/city_ranges.svg" type="Texture" id=5]
[ext_resource path="res://assets/icons/layers/land_use.svg" type="Texture" id=6]
[ext_resource path="res://assets/icons/layers/labels.svg" type="Texture" id=7]
[ext_resource path="res://scripts/gui/controls/visibility_buttons.gd" type="Script" id=8]

[node name="VisibilityButtons" type="HBoxContainer"]
margin_right = 192.0
margin_bottom = 24.0
alignment = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityLabels" type="Button" parent="."]
margin_right = 24.0
margin_bottom = 24.0
hint_tooltip = "City labels"
toggle_mode = true
icon = ExtResource( 7 )

[node name="LandUse" type="Button" parent="."]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
hint_tooltip = "Land use"
toggle_mode = true
icon = ExtResource( 6 )

[node name="Roads" type="Button" parent="."]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 24.0
hint_tooltip = "Roads"
toggle_mode = true
icon = ExtResource( 4 )

[node name="Resources" type="Button" parent="."]
margin_left = 84.0
margin_right = 108.0
margin_bottom = 24.0
hint_tooltip = "Resource deposits"
toggle_mode = true
icon = ExtResource( 2 )

[node name="CityRanges" type="Button" parent="."]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 24.0
hint_tooltip = "City ranges"
toggle_mode = true
icon = ExtResource( 5 )

[node name="DefenseRanges" type="Button" parent="."]
margin_left = 140.0
margin_right = 164.0
margin_bottom = 24.0
hint_tooltip = "Defense ranges"
toggle_mode = true
icon = ExtResource( 1 )

[node name="Events" type="Button" parent="."]
margin_left = 168.0
margin_right = 192.0
margin_bottom = 24.0
hint_tooltip = "Events"
toggle_mode = true
icon = ExtResource( 3 )

[connection signal="toggled" from="CityLabels" to="." method="_on_visibility_changed"]
[connection signal="toggled" from="LandUse" to="." method="_on_visibility_changed"]
[connection signal="toggled" from="Roads" to="." method="_on_visibility_changed"]
[connection signal="toggled" from="Resources" to="." method="_on_visibility_changed"]
[connection signal="toggled" from="CityRanges" to="." method="_on_visibility_changed"]
[connection signal="toggled" from="DefenseRanges" to="." method="_on_visibility_changed"]
[connection signal="toggled" from="Events" to="." method="_on_visibility_changed"]
